fix: use same spacing between all paragraphs

--- a/assets/scss/article.scss
+++ b/assets/scss/article.scss
@@ -14,7 +14,6 @@ article {
 
   p {
     width: 100%;
-    line-height: 1.5rem;
 
     &.intro {
       font-weight: 600;
